services/pacman/1.0.0/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "4"
  labels:
    name: mongo
  name: mongo
  namespace: ${workspaceNamespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongo
  template:
    metadata:
      labels:
        name: mongo
    spec:
      containers:
        - image: bitnami/mongodb:5.0.24
          name: mongo
          ports:
            - name: mongo
              containerPort: 27017
          volumeMounts:
            - name: mongo-db
              mountPath: /bitnami/mongodb
      volumes:
        - name: mongo-db
          persistentVolumeClaim:
            claimName: mongo-storage
