services/pacman/1.0.0/pacman-glb-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  name: glb-pacman
  namespace: pacman
  labels:
    app.kubernetes.io/name: glb-pacman
spec:
  # Added for glb demonstration
  host: pacman.cloudnative.nvdlab.net
  path: "/"
  to:
    kind: Service
    name: pacman
