services/pacman/1.0.0/pacman-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "5"
  name: pacman
  labels:
    app.kubernetes.io/name: pacman
spec:
  path: "/"
  to:
    kind: Service
    name: pacman
